--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "axios": "^1.7.3",
     "normalize.css": "^8.0.1",
     "notiflix": "^3.2.7",
@@ -24,6 +26,7 @@
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "rollup": "^4.20.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
